--- a/DoseRateEditor/Views/MainView.xaml
+++ b/DoseRateEditor/Views/MainView.xaml
@@ -10,7 +10,7 @@
         xmlns:oxy="http://oxyplot.org/wpf" 
         xmlns:viewmodels="clr-namespace:DoseRateEditor.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
                    mc:Ignorable="d"
-        Title="DoseRate Editor" Height="650" Width="1200">
+        Title="DoseRate Editor" Height="850" Width="1600">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition>
@@ -21,6 +21,9 @@
             </ColumnDefinition>
             <ColumnDefinition>
 
+            </ColumnDefinition>
+            <ColumnDefinition>
+                
             </ColumnDefinition>
         </Grid.ColumnDefinitions>
 
