--- a/DoseRateEditor/Views/MainView.xaml
+++ b/DoseRateEditor/Views/MainView.xaml
@@ -204,9 +204,8 @@
         </StackPanel>
 
         <StackPanel Grid.Row="4" Grid.Column="2" Grid.RowSpan="2">
-            <oxy:PlotView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Model="{Binding}" Height="300" Width="300"></oxy:PlotView>
+            <oxy:PlotView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Model="{Binding View3}" Height="300" Width="300"></oxy:PlotView>
         </StackPanel>
-
 
     </Grid>
 </metro:MetroWindow>
