Text for methods showing up

--- a/DoseRateEditor/Views/MainView.xaml
+++ b/DoseRateEditor/Views/MainView.xaml
@@ -188,6 +188,9 @@
             </Grid>
 
         </StackPanel>
+        <StackPanel Grid.Row="5" Grid.Column="1">
+            <TextBlock Text="{Binding CreditText}"></TextBlock>
+        </StackPanel>
 
 
 
