--- a/DoseRateEditor/Views/MainView.xaml
+++ b/DoseRateEditor/Views/MainView.xaml
@@ -11,6 +11,7 @@
         xmlns:viewmodels="clr-namespace:DoseRateEditor.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
                    mc:Ignorable="d"
         Title="{Binding AppTitle}" Height="850" Width="1600">
+       
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition>
@@ -43,8 +44,11 @@
             <RowDefinition Height="200*">
 
             </RowDefinition>
-            <RowDefinition Height="145">
+            <RowDefinition Height="125">
 
+            </RowDefinition>
+            <RowDefinition Height="20">
+                 
             </RowDefinition>
         </Grid.RowDefinitions>
 
@@ -194,6 +198,8 @@
             <TextBlock Text="{Binding CreditText}"></TextBlock>
         </StackPanel>
 
+        
+
 
 
         <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="4">
@@ -211,6 +217,16 @@
         <StackPanel Grid.Row="4" Grid.Column="2" Grid.RowSpan="2">
             <oxy:PlotView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Model="{Binding View3}" Height="300" Width="300"></oxy:PlotView>
         </StackPanel>
+
+        <TextBlock Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4">
+            Bound by the terms of the 
+            <Hyperlink 
+            NavigateUri="http://medicalaffairs.varian.com/download/VarianLUSLA.pdf"
+            >
+            VarianLUSLA
+            </Hyperlink>    
+
+        </TextBlock>
 
     </Grid>
 </metro:MetroWindow>
