--- a/DoseRateEditor/Views/MainView.xaml
+++ b/DoseRateEditor/Views/MainView.xaml
@@ -184,13 +184,28 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <CheckBox Grid.Column="0" Grid.Row="0" Margin="5" Command="{Binding PreviewDRCommand}" IsChecked="{Binding PreviewDR}">Doserate Preview</CheckBox>
-                <CheckBox Grid.Column="0" Grid.Row="1" Margin="5" Command="{Binding PreviewGSCommand}" IsChecked="{Binding PreviewGS}">Gantry Speed Preview</CheckBox>
-                <CheckBox Grid.Column="0" Grid.Row="2" Margin="5" Command="{Binding PreviewdMUCommand}" IsChecked="{Binding PreviewdMU}">Delta MU Preview</CheckBox>
+                <CheckBox Grid.Column="0" Grid.Row="0" Margin="5" Command="{Binding PreviewDRCommand}" IsChecked="{Binding PreviewDR}">
+                    <TextBlock Background="Orange">Preview Doserate</TextBlock>
+                </CheckBox>
+                
+                <CheckBox Grid.Column="0" Grid.Row="1" Margin="5" Command="{Binding PreviewGSCommand}" IsChecked="{Binding PreviewGS}">
+                    <TextBlock>Gantry Speed Preview</TextBlock> 
+                </CheckBox>
+                
+                <CheckBox Grid.Column="0" Grid.Row="2" Margin="5" Command="{Binding PreviewdMUCommand}" IsChecked="{Binding PreviewdMU}">
+                    <TextBlock Background="LightBlue">Delta MU Preview</TextBlock> 
+                </CheckBox>
 
-                <CheckBox Grid.Column="1" Grid.Row="0" Margin="5" Command="{Binding PlotCurrentDRCommand}" IsChecked="{Binding CurrentDR}">Current Doserate</CheckBox>
-                <CheckBox Grid.Column="1" Grid.Row="1" Margin="5" Command="{Binding PlotCurrentGSCommand}" IsChecked="{Binding CurrentGS}">Current Gantry Speed</CheckBox>
-                <CheckBox Grid.Column="1" Grid.Row="2" Margin="5" Command="{Binding PlotCurrentdMUCommand}" IsChecked="{Binding CurrentdMU}">Current Delta MU</CheckBox>
+                <CheckBox Grid.Column="1" Grid.Row="0" Margin="5" Command="{Binding PlotCurrentDRCommand}" IsChecked="{Binding CurrentDR}">
+                    <TextBlock Background="Red">Current Doserate</TextBlock>
+                </CheckBox>
+                <CheckBox Grid.Column="1" Grid.Row="1" Margin="5" Command="{Binding PlotCurrentGSCommand}" IsChecked="{Binding CurrentGS}">
+                    <TextBlock Background="Blue">Current Gantry Speed</TextBlock>
+                </CheckBox>
+                <CheckBox Grid.Column="1" Grid.Row="2" Margin="5" Command="{Binding PlotCurrentdMUCommand}" IsChecked="{Binding CurrentdMU}">
+                    <TextBlock Background="Yellow">Current Delta MU</TextBlock>
+                </CheckBox>
+                
             </Grid>
 
         </StackPanel>
