--- a/DoseRateEditor/Views/MainView.xaml
+++ b/DoseRateEditor/Views/MainView.xaml
@@ -233,10 +233,12 @@
             <oxy:PlotView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Model="{Binding View3}" Height="300" Width="300"></oxy:PlotView>
         </StackPanel>
 
+        
         <TextBlock Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" Background="PaleVioletRed">    
-            <Label Margin="0"><Hyperlink NavigateUri="http://medicalaffairs.varian.com/download/VarianLUSLA.pdf">
+            <Label Margin="0">
                 Bound by the terms of the Varian LUSLA
-            </Hyperlink></Label>
+            </Label>
+            <Button Command="{Binding HyperlinkCmd}">View agreement</Button>
             <Label Margin="0" Content="{Binding PostText}"/>
         </TextBlock>
     </Grid>
